fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -777,7 +777,7 @@ strong {
   color: var(--secondary-color);
   font-weight: var(--font-weight-bold);
   margin-right: 10px;
-  padding: 15px;
+  padding: 14px;
   display: inline-block;
 }
 
